@@ -5535,12 +5535,8 @@ HRESULT WebView::notifyPreferencesChanged(IWebNotification* notification)
 
 #if ENABLE(WEB_AUDIO)
     settings.setWebAudioEnabled(true);
-    settings.setPrefixedWebAudioEnabled(true);
-
-    hr = prefsPrivate->modernUnprefixedWebAudioEnabled(&enabled);
-    if (FAILED(hr))
-        return hr;
-    settings.setModernUnprefixedWebAudioEnabled(!!enabled);
+    settings.setPrefixedWebAudioEnabled(false);
+    settings.setModernUnprefixedWebAudioEnabled(true);
 #endif // ENABLE(WEB_AUDIO)
 
 #if ENABLE(WEBGL)
